--- a/css/showfood_admin.css
+++ b/css/showfood_admin.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: #F4ECE1;
     font-family: 'IBM Plex Sans Thai', sans-serif;
@@ -187,7 +186,7 @@ footer {
  ::-webkit-scrollbar-thumb:hover {
     background: #4e4035;
 }
-  a {
+  .logout2 {
     text-decoration: none;
     cursor: pointer;
     padding: 1em 3%;
@@ -207,19 +206,18 @@ footer {
     
   }
   
-  a:link {
+  .logout2:link {
     text-decoration: none;
   }
+
+  a:link {
+      text-decoration: none;
+  }
   
-  a:hover {
+  .logout2:hover {
     background-color: ghostwhite;
   }
 
   .logout1 {
       margin-top: 6%;
   }
-  #tdname{
-    width: 170px;
-    overflow: hidden;
-    display: inline-block;
-}
