--- a/css/foodlist.css
+++ b/css/foodlist.css
@@ -77,7 +77,7 @@ img {
 
 }
 /*  */
-#back {
+/* #back {
     font-family: 'IBM Plex Sans Thai', sans-serif;
     font-size: 17px;
     background-color: rgb(0, 0, 0);
@@ -89,7 +89,7 @@ img {
     margin-left: 75%;
     transition-duration: 0.4s;
     margin-bottom: 5%;
-}
+} */
 
 #back:hover {
     background-color: rgba(47, 47, 47, 1);
@@ -103,7 +103,6 @@ img {
     border: none;
     font-weight: bold;
     box-shadow: 0.25em 0.25em 0.25em rgba(0, 0, 0, 0.2);
-    margin-left: -3%;
     transition-duration: 0.4s;
     margin-bottom: 5%;
     
